--- a/src/templates/allEvent.html
+++ b/src/templates/allEvent.html
@@ -3,7 +3,7 @@
 <div class="row">
 
     <div style="right: 70%; " >
-        <form method="post">
+        <form method="post" class="mb-4">
 
         <select name="mese">
             <option value="%">Tutti</option>
@@ -72,7 +72,6 @@
     {% endfor %}
     {% else %}
     <h5 class="mt-5">Nessun Evento disponibile...</h5>
-    <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
     {% endif %}
 
     <nav aria-label="Page navigation example">
