--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -2,6 +2,18 @@
     <h1>Elenco Utenti</h1>
 </div>
 
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        {% for pageNumber in pagesNumber %}
+        <li class="page-item">
+            <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=admin&pagination={{pageNumber}}">
+                {{ pageNumber + 1 }}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+</nav>
+
 {% if users|length > 0 %}
 <table class="table table-hover">
     <thead>
@@ -25,7 +37,7 @@
                 {% endif %}
             </td>
             <td>
-                <a class="btn btn-outline-secondary btn-sm left" href="../{{ ROOT_URL }}user?page=viewAdmin&id={{ user.id }}">Modifica</a>
+                <a class="btn btn-outline-secondary btn-sm left" href="../{{ ROOT_URL }}user?page=admin&id={{ user.id }}">Modifica</a>
                 
                 <form method="post" class="right">
                     <input type="hidden" name="id" value="{{ user.id }}">
@@ -39,3 +51,15 @@
 {% else %}
 <p>Nessun Utente presente...</p>
 {% endif %}
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        {% for pageNumber in pagesNumber %}
+        <li class="page-item">
+            <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=favoriteEvent&pagination={{pageNumber}}">
+                {{ pageNumber + 1 }}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+</nav>
