--- a/src/templates/event.html
+++ b/src/templates/event.html
@@ -2,6 +2,18 @@
 
 <div class="row">
 
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            {% for pageNumber in pagesNumber %}
+            <li class="page-item">
+                <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=event&pagination={{pageNumber}}">
+                    {{ pageNumber + 1 }}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </nav>
+
     {% if events %}
     {% for event in events %}
 
@@ -28,5 +40,17 @@
     <h5 class="mt-5">Nessun Evento disponibile...</h5>
     <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
     {% endif %}
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            {% for pageNumber in pagesNumber %}
+            <li class="page-item">
+                <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=event&pagination={{pageNumber}}">
+                    {{ pageNumber + 1 }}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </nav>
 
 </div>
