--- a/src/templates/historicEvent.html
+++ b/src/templates/historicEvent.html
@@ -1,5 +1,17 @@
 <h2 class="mt-4">Storico eventi registrati</h2>
 <div class="row">
+    
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            {% for pageNumber in pagesNumber %}
+            <li class="page-item">
+                <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=historicEvent&pagination={{pageNumber}}">
+                    {{ pageNumber + 1 }}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </nav>
 
     {% if historicEvent %}
     {% for event in historicEvent %}
@@ -17,5 +29,17 @@
     {% else %}
     <p>Nessun evento disponibile...</p>
     {% endif %}
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            {% for pageNumber in pagesNumber %}
+            <li class="page-item">
+                <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=historicEvent&pagination={{pageNumber}}">
+                    {{ pageNumber + 1 }}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </nav>
 
 </div>
