--- a/src/templates/viewEvent.html
+++ b/src/templates/viewEvent.html
@@ -41,7 +41,7 @@
 	<ul class="pagination">
 		{% for pageNumber in pagesNumber %}
 		<li class="page-item">
-			<a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=viewEvent&id={{ event.id }}&pagination={{pageNumber}}">
+			<a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=viewEvent&id={{ eventId }}&pagination={{pageNumber}}">
 				{{ pageNumber + 1 }}
 			</a>
 		</li>
