--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -21,7 +21,7 @@
 
 	<link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.css">
 
-	<title>Eventi Agile</title>
+	<title>Music Events</title>
 </head>
 
 <body>
