--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -37,7 +37,7 @@
                 {% endif %}
             </td>
             <td>
-                <a class="btn btn-outline-secondary btn-sm left" href="../{{ ROOT_URL }}user?page=admin&id={{ user.id }}">Modifica</a>
+                <a class="btn btn-outline-secondary btn-sm left" href="../{{ ROOT_URL }}user?page=viewAdmin&id={{ user.id }}">Modifica</a>
                 
                 <form method="post" class="right">
                     <input type="hidden" name="id" value="{{ user.id }}">
