--- a/src/templates/event.html
+++ b/src/templates/event.html
@@ -6,7 +6,8 @@
         <ul class="pagination">
             {% for pageNumber in pagesNumber %}
             <li class="page-item">
-                <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=event&pagination={{pageNumber}}">
+                <a class="btn btn-primary ml-1 mt-2" role="button"
+                    href="../{{ ROOT_URL }}user?page=event&pagination={{pageNumber}}">
                     {{ pageNumber + 1 }}
                 </a>
             </li>
@@ -36,16 +37,13 @@
     </div>
 
     {% endfor %}
-    {% else %}
-    <h5 class="mt-5">Nessun Evento disponibile...</h5>
-    <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
-    {% endif %}
 
     <nav aria-label="Page navigation example">
         <ul class="pagination">
             {% for pageNumber in pagesNumber %}
             <li class="page-item">
-                <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=event&pagination={{pageNumber}}">
+                <a class="btn btn-primary ml-1 mt-2" role="button"
+                    href="../{{ ROOT_URL }}user?page=event&pagination={{pageNumber}}">
                     {{ pageNumber + 1 }}
                 </a>
             </li>
@@ -53,4 +51,8 @@
         </ul>
     </nav>
 
+    {% else %}
+    <h5 class="mt-5">Nessun Evento disponibile...</h5>
+    <a class="underline scuro" href="../{{ ROOT_URL }}user?page=createEvent">Crea un evento! &raquo;</a>
+    {% endif %}
 </div>
