--- a/src/templates/favoriteEvent.html
+++ b/src/templates/favoriteEvent.html
@@ -4,7 +4,8 @@
         <ul class="pagination">
             {% for pageNumber in pagesNumber %}
             <li class="page-item">
-                <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=favoriteEvent&pagination={{pageNumber}}">
+                <a class="btn btn-primary ml-1 mt-2" role="button"
+                    href="../{{ ROOT_URL }}user?page=favoriteEvent&pagination={{pageNumber}}">
                     {{ pageNumber + 1 }}
                 </a>
             </li>
@@ -33,20 +34,22 @@
     </div>
 
     {% endfor %}
-    {% else %}
-    <p>Nessun evento disponibile...</p>
-    {% endif %}
 
     <nav aria-label="Page navigation example">
         <ul class="pagination">
             {% for pageNumber in pagesNumber %}
             <li class="page-item">
-                <a class="btn btn-primary ml-1 mt-2" role="button" href="../{{ ROOT_URL }}user?page=favoriteEvent&pagination={{pageNumber}}">
+                <a class="btn btn-primary ml-1 mt-2" role="button"
+                    href="../{{ ROOT_URL }}user?page=favoriteEvent&pagination={{pageNumber}}">
                     {{ pageNumber + 1 }}
                 </a>
             </li>
             {% endfor %}
         </ul>
     </nav>
+
+    {% else %}
+    <p>Nessun evento disponibile...</p>
+    {% endif %}
 
 </div>
